--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,3 +25,5 @@ sqlx = { version = "0.8.3", features = [
   "runtime-tokio",
   "tls-native-tls",
 ] }
+redis = { version = "0.29.5", features = ["tokio-comp"] }
+bb8-redis = "0.21.0"
